--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
       </header>
       <fieldset class="tasks-list">
         <label class="tasks-list-item">
-          <input type="checkbox" name="task_1" class="tasks-list-cb" checked>
+          <span class="tasks-list-desc">Опанувати HTML та CSS</span>
+          <input type="checkbox" name="task_1" class="tasks-list-cb">
           <span class="tasks-list-mark"></span>
-          <span class="tasks-list-desc">🔹 Опанувати HTML та CSS</span>
         </label>
         <label class="tasks-list-item">
-          <input type="checkbox" name="task_2" class="tasks-list-cb" checked>
+          <span class="tasks-list-desc">Опанувати Git та GitHub</span>
+          <input type="checkbox" name="task_2" class="tasks-list-cb">
           <span class="tasks-list-mark"></span>
-          <span class="tasks-list-desc">🔹 Опанувати Git та GitHub</span>
         </label>
         <label class="tasks-list-item">
+          <span class="tasks-list-desc">Опанувати JavaScript</span>
           <input type="checkbox" name="task_3" class="tasks-list-cb">
           <span class="tasks-list-mark"></span>
-          <span class="tasks-list-desc">🔹 Опанувати JavaScript</span>
         </label>
         <label class="tasks-list-item">
+          <span class="tasks-list-desc">Опанувати Node.js</span>
           <input type="checkbox" name="task_4" class="tasks-list-cb">
           <span class="tasks-list-mark"></span>
-          <span class="tasks-list-desc">🔹 Опанувати Node.js</span>
         </label>
       </fieldset>
     </div>
